--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: clojure
-before_script:
+before_install:
   - sudo apt-get -y install rlwrap
   - curl -O https://download.clojure.org/install/linux-install-1.10.1.536.sh
   - chmod +x linux-install-1.10.1.536.sh
