--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ before_install:
   - curl -O https://download.clojure.org/install/linux-install-1.10.1.536.sh
   - chmod +x linux-install-1.10.1.536.sh
   - sudo ./linux-install-1.10.1.536.sh
+  - curl -O https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein
+  - chmod +x lein
 addons:
   apt:
     update: true
-lein: 2.9.3
-script: lein do clean, check, test
+script: ./lein do clean, check, test
 jdk:
   - openjdk8
   - openjdk11
