Try removing docs folder in umbrella-dir

--- a/.github/workflows/prs-doc-preview.yml
+++ b/.github/workflows/prs-doc-preview.yml
@@ -22,4 +22,4 @@ jobs:
         with:
           source-dir: ./docs/
           preview-branch: master
-          umbrella-dir: docs/pr-preview
+          umbrella-dir: pr-preview
