--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,9 +1,10 @@
 name: Build and Deploy
 
 on:
+  push:
+    branches:
+      - master
   workflow_dispatch:
-  pull_request:
-    type: [closed]
 
 # This is just a guard against two of these actions
 # running at the same time. Not likely an issue for
@@ -11,22 +12,12 @@ on:
 concurrency: build-and-deploy-${{ github.ref }}
 
 jobs:
-  # With this job we will check if the PR was merged when closed. If not, we won't run these jobs.
-  check_pr_status:
+  deploy-docs:
     runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch' || github.event.pull_request.merged == true
-    
-    steps:
-      - name: Check PR status
-        run: echo "The PR was merged or manually triggered"
 
-  # we may add a build job here at some point that for instance
-  # builds the docs so we don't have to generate them at run time
-  
-  deploy:
-    runs-on: ubuntu-latest
-    needs: check_pr_status
-    if: success()
+    # Only run this job if there were changes in the docs folder
+    paths:
+      - ./docs/*
     
     steps:
       - name: Checkout
