--- a/.github/workflows/prs_doc_preview.yml
+++ b/.github/workflows/prs_doc_preview.yml
@@ -7,14 +7,14 @@ on:
       - reopened
       - synchronize
       - closed
+  paths:
+    - ./docs
 
 concurrency: prs-doc-preview-${{ github.ref }}
 
 jobs:
-  deploy-preview:
+  deploy-docs-preview:
     runs-on: ubuntu-latest
-    paths:
-      - ./docs
 
     steps:
       - name: Checkout
