Try to fix paths expression again

--- a/.github/workflows/prs_doc_preview.yml
+++ b/.github/workflows/prs_doc_preview.yml
@@ -3,7 +3,7 @@ name: PR Docs Preview
 on:
   pull_request:
     paths:
-      - './docs/**/*'
+      - 'docs/**/*'
     types:
       - opened
       - reopened
