--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,13 +12,24 @@ on:
 concurrency: build-and-deploy-${{ github.ref }}
 
 jobs:
-  deploy-docs:
+  check-for-doc-changes:
     runs-on: ubuntu-latest
 
-    # Only run this job if there were changes in the docs folder
-    paths:
-      - ./docs/*
-    
+    steps:
+      - name: Check for changes in docs folder
+        id: docs_check
+        run: |
+	  if git diff --quiet HEAD^ HEAD --name-only | grep -q '^docs/'; then
+            echo "::set-output name=docs_changed::true"
+          else
+            echo "::set-output name=docs_changed::false"
+          fi
+
+  deploy-docs:
+    runs-on: ubuntu-latest
+    needs: check_docs_changes
+    if: needs.check_docs_changes.outputs.docs_changed == 'true'
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
