--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -28,7 +28,7 @@ jobs:
   deploy-docs:
     runs-on: ubuntu-latest
     needs: check_docs_changes
-    if: needs.check_docs_changes.outputs.docs_changed == 'true'
+    if: needs.check-for-doc-changes.outputs.docs_changed == 'true'
 
     steps:
       - name: Checkout
