--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,7 +27,7 @@ jobs:
 
   deploy-docs:
     runs-on: ubuntu-latest
-    needs: check_docs_changes
+    needs: check-for-doc-changes 
     if: needs.check-for-doc-changes.outputs.docs_changed == 'true'
 
     steps:
