--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Check for changes in docs folder
         id: docs_check
         run: |
-          if git diff --quiet HEAD^ HEAD --name-only | grep -q '^docs/'; then
+          if git diff --name-only master './docs'; then
             echo "docs_changed=true" >> $GITHUB_OUTPUT
           else
             echo "docs_changed=false" >> $GITHUB_OUTPUT
