--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,10 +12,14 @@ on:
 concurrency: build-and-deploy-${{ github.ref }}
 
 jobs:
-  check-for-doc-changes:
+  deploy-docs:
     runs-on: ubuntu-latest
+    needs: check-for-doc-changes 
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Check for changes in docs folder
         id: docs_check
         run: |
@@ -25,16 +29,8 @@ jobs:
             echo "docs_changed=false" >> $GITHUB_OUTPUT
           fi
 
-  deploy-docs:
-    runs-on: ubuntu-latest
-    needs: check-for-doc-changes 
-    if: needs.check-for-doc-changes.outputs.docs_changed == 'true'
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
       - name: Deploy documentation
+        if: ${{ steps.docs_check.outputs.docs_changed == 'true' }}
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: docs
