--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Check for changes in docs folder
         id: docs_check
         run: |
-          if git diff --name-only origin/master './docs'; then
+          if  git diff --name-only FETCH_HEAD './docs'; then
             echo "docs_changed=true" >> $GITHUB_OUTPUT
           else
             echo "docs_changed=false" >> $GITHUB_OUTPUT
