--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -23,8 +23,10 @@ jobs:
         id: docs_check
         run: |
           if  git diff --name-only FETCH_HEAD './docs'; then
+            echo "There have been changes to the docs."
             echo "docs_changed=true" >> $GITHUB_OUTPUT
           else
+            echo "No changes to the docs."
             echo "docs_changed=false" >> $GITHUB_OUTPUT
           fi
 
