--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Check for changes in docs folder
         id: docs_check
         run: |
-          if  [[ $(git diff --name-only master './docs') ]]; then
+          if  [[ $(git diff --name-only ${{ github.event.repository.default_branch }} './docs') ]]; then
             echo "There have been changes to the docs."
             echo "docs_changed=true" >> $GITHUB_OUTPUT
           else
