--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -23,7 +23,7 @@ jobs:
         id: docs_check
         run: |
           git fetch origin master
-          if  [[ $(git diff --name-only ${{ github.event.repository.default_branch }} -- './docs') ]]; then
+          if  [[ $(git diff --name-only origin/${{ github.event.repository.default_branch }} -- './docs') ]]; then
             echo "There have been changes to the docs."
             echo "docs_changed=true" >> $GITHUB_OUTPUT
           else
